# tanya-lalin

./: .env.example  .gitignore  README.md  compose.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  docker-entrypoint.sh  enums.py  logging_setup.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 4286d94a6783_create_legal_text_chunk_table.py  d4d3dd86a68d_create_legal_text_chunks_table.py
backend/app/: constants.py  exceptions.py  main.py  schemas.py
backend/app/api/: chat.py  health.py
backend/app/core/: database.py  gemini_client.py  ollama_client.py  session_store.py  vector_store.py
backend/app/db/: base.py  models.py  session.py
backend/app/services/: chat.py  embeddings.py  llm.py  query_rewriter.py  retrieval.py
backend/ingestions/: cli.py  io.py  models.py  pdf_patterns.py  validation.py
backend/ingestions/chunker/: main.py  validation.py
backend/ingestions/db/: main.py
backend/ingestions/parser/: cli.py  core.py  io.py  main.py  pdf_patterns.py  validation.py
backend/scripts/: enums.py  ingest_to_chromadb.py  models.py  parser_validation.py  pdf_parser.py  run_parser.py
backend/tests/ingestions/: test_io.py  test_parser_core.py  test_validation.py
backend/tests/ingestions/parser/: test_core.py  test_io.py  test_parser_core.py  test_validation.py
docs/: IMPLEMENTATION.md  SPECIFICATION.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: ChatInput.tsx  (+1 more)
(+1 files in other folders)
