[project]
name = "tanya-lalin"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Malik Fajar Mubarok", email = "mubarok.malikfajar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.4",
    "loguru>=0.7.3",
    "ollama>=0.6.0",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.4",
    "scipy>=1.13.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "tqdm>=4.67.1",
]
