[project]
name = "tanya-lalin"
version = "1.0.0"
description = "RAG-based chatbot for Indonesian traffic law Q&A"
authors = [{ name = "Malik Fajar Mubarok", email = "mubarok.malikfajar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    
    # Google Gemini
    "google-genai>=1.0.0",
    
    # Vector database
    "chromadb>=0.5.0",
    
    # Data processing  
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # PDF parsing (for ingestion)
    "pymupdf>=1.24.0",
    
    # Utilities
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
